# nimo

./: CHANGELOG.md  Cargo.toml  README.md
present/assets/: styles.css
present/templates/: base.html  index.html  presentation.html
src/: config.rs  data.rs  main.rs
src/completion/: cmd.rs
src/emit/: cmd.rs
src/ping/: cmd.rs  config.rs  data.rs  mod.rs
src/present/: command.rs  mod.rs  plot.rs
src/report/: command.rs
src/speedtest/: cmd.rs  config.rs  data.rs  mod.rs
systemd/: nimo-ping.service  nimo-ping.timer  nimo-speed-test.service  nimo-speed-test.timer
