[package]
authors = ["Adrian Wannenmacher <tfld@tfld.dev>"]
categories = ["command-line-utilities"]
description = "Network Interface MOnitor"
edition = "2018"
keywords = ["utility", "tool", "status", "speedtest"]
license = "MIT"
name = "nimo"
readme = "README.md"
repository = "https://github.com/TeFiLeDo/nimo"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
env_logger = "0.8"
figment = { version = "0.10", features = ["env", "toml"] }
fs2 = "0.4"
home = "0.5"
human-panic = "1.0"
include_dir = "0.6"
log = "0.4"
plotters = "0.3"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
surge-ping = "0.2"
tera = "1.10"
tokio = { version = "1.5", features = ["net", "rt-multi-thread"] }
